--- a/intro.html
+++ b/intro.html
@@ -161,6 +161,7 @@
 <ul>
 <li><a href="https://github.com/EbTech/rust-algorithms">Contest Algorithms in Rust by EbTech</a></li>
 <li><a href="https://snippets.kiwiyou.dev/">kiwiyou's Snippets Collection</a></li>
+<li><a href="https://jh05013.github.io/ps-snippets/">jh05013's Snippets Collection</a></li>
 </ul>
 <h3 id="c"><a class="header" href="#c">C++</a></h3>
 <ul>
